<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"

        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_option"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"
        app:layout_constraintStart_toStartOf="parent" />
    <RadioGroup
        android:id="@+id/tip_option"
        android:checkedButton="@id/hai_muoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/hai_muoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20" />
        <RadioButton
            android:id="@+id/muoi_lam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15" />
        <RadioButton
            android:id="@+id/muoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10" />

    </RadioGroup>

    <Switch
        android:id="@+id/round_up_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/round_on_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tip_option"
        app:layout_constraintTop_toBottomOf="@id/tip_option"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:id="@+id/calculate_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/round_up_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/result_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_tip"

        tools:text="Ket qua: 10"/>
</androidx.constraintlayout.widget.ConstraintLayout>